--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -313,7 +313,7 @@ Two hits apiece and it was getting short.&ensp;I snuffed it against the ragged r
 <br/>&emsp;"Yeah, I was hoping it'd be a bit warmer.&ensp;Would be with less wind."&ensp;
 <br/>&emsp;She turned.&ensp;"Here."&ensp;
 She rolled over and onto me, hands on my shoulders, 
-and rubbed her nose against mine but not clicking shades.&ensp;Definitely warmer.&ensp;
+and rubbed her nose against mine.&ensp;Definitely warmer.&ensp;
 After a few moments she sat up, arching her back to unclip her top and let it slide down her arms.&ensp;
 Her hat was tilted back a bit, points of sky-brightness peeking through intersections of woven straw,
 a Renaissance halo effect, <i>Saint Ray-Ban With Attendant Areolae</i>.&ensp;
