--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -7,8 +7,8 @@
 I'd been living in Willow Glen for a couple years.&ensp;It was a reasonably nice part of San Jose.&ensp;
 Older houses.&ensp;
 Ours had a long kitchen running half the length of the east side of the house.&ensp;
-Lino, walls, counters, cabinets and ceiling were in relentless smiley yellow like some psych experiment.&ensp;
-Scrambled eggs could be amusing, or not, or really not, a baseline for the day.&ensp;
+The lino, counters, cabinets and walls were shades of yellow whose original disagreements could be seen 
+in the places least touched by morning sun but generally faded to a kind of resignation.&ensp;
 <br/>&emsp;The driveway ran the length of that side of the house.&ensp;My Firebird was in the detached garage
 keeping my housemate's pot plants company.&ensp;Cross-adulterating.&ensp;
 The 'Bird's interior smelled like indica and the bud tasted faintly of gasoline and tires.&ensp;
