--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -4,12 +4,12 @@
 <p/>
 <i> Apr. 28, 1987 </i>
 <p/>
-I'd been living in Willow Glen for a couple years.&ensp;It was a reasonably nice part of San Jose.&ensp;
-Older houses.&ensp;
-Ours had a long kitchen running half the length of the east side of the house.&ensp;
+I'd been living in Willow Glen for a couple years.&ensp;It was a reasonably nice part of San Jose with
+older houses.&ensp;
+Ours had a long kitchen running over half the length of the east side of the house.&ensp;
 The lino, counters, cabinets and walls were shades of yellow whose original disagreements could be seen 
 in the places least touched by morning sun but generally faded to a kind of resignation.&ensp;
-<br/>&emsp;The driveway ran the length of that side of the house.&ensp;My Firebird was in the detached garage
+<br/>&emsp;The driveway was along that side of the house.&ensp;My Firebird was in the detached garage
 keeping my housemate's pot plants company.&ensp;Cross-adulterating.&ensp;
 The 'Bird's interior smelled like indica and the bud tasted faintly of gasoline and tires.&ensp;
 <br/>&emsp;The house next door was the mirror layout of ours, so the driveways ran adjacent.&ensp;That house had
