--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -4,11 +4,10 @@
 <p/>
 <i> Apr. 28, 1987 </i>
 <p/>
-I'd been living in Willow Glen for a couple years.&ensp;It was a reasonably nice part of San Jose with
-older houses.&ensp;
+I'd been living in Willow Glen for a couple years.&ensp;It was a reasonably nice part of San Jose.&ensp;
 Ours had a long kitchen running over half the length of the east side of the house.&ensp;
 The lino, counters, cabinets and walls were shades of yellow whose original disagreements could be seen 
-in the places least touched by morning sun but generally faded to a kind of resignation.&ensp;
+in the places least touched by morning sun but generally faded to a rental resignation.&ensp;
 <br/>&emsp;The driveway was along that side of the house.&ensp;My Firebird was in the detached garage
 keeping my housemate's pot plants company.&ensp;Cross-adulterating.&ensp;
 The 'Bird's interior smelled like indica and the bud tasted faintly of gasoline and tires.&ensp;
