--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -11,7 +11,7 @@ in the places least touched by morning sun but generally aged to a rental resign
 <br/>&emsp;The driveway was along that side of the house.&ensp;My Firebird was in the detached garage
 keeping my housemate's pot plants company.&ensp;Cross-adulterating,
 the car's interior smelled like indica and the bud tasted faintly of gasoline and tires.&ensp;
-<br/>&emsp;The house next door was the mirror layout of ours, so the driveways ran adjacent.&ensp;That house had
+<br/>&emsp;Next door was a house the mirror layout of ours, so the driveways ran adjacent.&ensp;It had
 been on the market and recently bought by a smarmy guy who hung an Armenian flag and insurance sign
 and replaced the front lawn with concrete so his customers had somewhere to park.&ensp;No street parking on Curtner Avenue.&ensp;
 <br/>&emsp;That day I pulled up on my motorcycle, clicked it into neutral and thumbed the kill switch to make my
