--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -23,7 +23,7 @@ But I stopped at the front because of the woman in the bright pink bikini with t
 sprinkling the flowers recently planted in the dirt strip between the driveways.&ensp;The flowers paled.&ensp;
 <br/>&emsp;She sashayed from the Armenian's driveway to mine,
 and put the tip of her index finger on the top edge of my
-bike's mirror and said:  "I like motorcycles."&ensp;
+bike's mirror and said:  "Nice."&ensp;
 <br/>&emsp;Pulling off my helmet gave me a few seconds.&ensp;I said:  "It doesn't need watering."&ensp;
 <br/>&emsp;"How 'bout you?"&ensp;She raised her can.&ensp;
 <br/>&emsp;"I'm good for now."&ensp;
@@ -31,7 +31,7 @@ bike's mirror and said:  "I like motorcycles."&ensp;
 <br/>&emsp;Motorcycles did draw women and this would momentarily baffle me because when a guy
 gives another guy a ride there was usually an attempt to wheelie and dump your friend.&ensp;It's in the
 Y chromosome rulebook somewhere.&ensp;
-<br/>&emsp;"Sure," I said.&ensp;Chivalry was also in the rulebook, at least towards women.&ensp;That meant that not
+<br/>&emsp;"Sure," I said.&ensp;Chivalry was in there, too, in the <i>Behavior Towards Women</i> section.&ensp;That meant that not
 only didn't you try to dump them on the road or trail, you tried to protect them.&ensp;And that meant gear.&ensp;
 I had a spare leather jacket and gloves.&ensp;I had a helmet that would fit her, well enough anyway.&ensp;
 "Gotta wear jeans and shoes, though."&ensp;
