--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -31,7 +31,7 @@ bike's mirror and said:  "Nice."&ensp;
 <br/>&emsp;Motorcycles did draw women and this would momentarily baffle me because when a guy
 gives another guy a ride there was usually an attempt to wheelie and dump your friend.&ensp;It's in the
 Y chromosome rulebook somewhere.&ensp;
-<br/>&emsp;"Sure," I said.&ensp;Next to <i>Mating Rituals* was a *Gallantry Toward Women</i> section.&ensp;Not
+<br/>&emsp;"Sure," I said.&ensp;Next to <i>Mating Rituals</i> was a <i>Gallantry Toward Women</i> section.&ensp;Not
 only didn't you try to dump them on the road or trail, you tried to protect them.&ensp;And that meant gear.&ensp;
 I had a spare leather jacket and gloves.&ensp;I had a helmet that would fit her, well enough anyway.&ensp;
 "Gotta wear jeans and shoes, though."&ensp;
