--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -35,7 +35,7 @@ Y chromosome rulebook somewhere.&ensp;
 only didn't you try to dump them on the road or trail, you tried to protect them.&ensp;And that meant gear.&ensp;
 I had a spare leather jacket and gloves.&ensp;I had a helmet that would fit her, well enough anyway.&ensp;
 "Gotta wear jeans and shoes, though."&ensp;
-<br/>&emsp;Parts tilted subtly this way and that and her free hand swept past her her current attire.&ensp;"No?"&ensp;
+<br/>&emsp;Parts tilted subtly this way and that and her free hand swept to showcase her current state of attire.&ensp;"No?"&ensp;
 <br/>&emsp;"Only in my dreams."&ensp;Of which.&ensp;
 <br/>&emsp;"Okay.&ensp;When?"&ensp;
 <br/>&emsp;"Knock on the back door.&ensp;I've got to check my answering machine."&ensp;I did not.&ensp;But I needed to 
