--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -197,19 +197,19 @@ While waiting for the green, I said:  "The seat belt is old school."&ensp;
 <br/>&emsp;It had taken me a while to figure out that I'm really more interested in cornering than straight line speed.&ensp;
 It had then taken some experimenting, wider wheels, various tires, sway bars, adjustable shocks, to get
 the big car to do what I wanted.&ensp;Labors of love are forever works in progress.&ensp;
-Passions are a kind of trap we pay to get into, stay in.&ensp;Or some crap.&ensp;Drop the clutch.&ensp;
+Passions are a kind of trap we pay to get into, stay in.&ensp;Or some such crap.&ensp;Drop the clutch.&ensp;
 <br/>&emsp;"Unhhhh!"&ensp;
 <br/>&emsp;It was impressive, especially in first gear, the sudden snarl, the car leaping both forward and sideways.&ensp;
 I preferred to initiate first-time passengers with a left-hand turn to push them against their door 
 instead of toward me.&ensp;Though one, fearing defenestration, had tried to grab my arm.&ensp;
-<br/>&emsp;I powered on the stereo.&ensp;Floyd, "Have a Cigar."&ensp;
+<br/>&emsp;A shift from first to fourth quieted the cabin.&ensp;I powered powered on the stereo.&ensp;Floyd, "Have a Cigar."&ensp;
 <br/>&emsp;"Jesus," she said, rearranging herself.&ensp;"Do that again."&ensp;
 <br/>&emsp;I took a detour to let her experience the only twisty spot in the neighborhood, Dry Creek Road.&ensp;
-I considered it my testing area.&ensp;
+I considered it my testing area.&ensp;Nice houses with fussy landscaping.&ensp;
 Later the city installed traffic signals along there, set to blinking red.&ensp;Closest I'd get to a statue.&ensp;
 <br/>&emsp;The route to the theater had us on El Camino Real.&ensp;Three lanes wide each way, center turn lane,
 and breakout right-turn lanes at each intersection.&ensp;It wasn't a Friday or Saturday night but the Firebird still 
-attracted a friendly challenger at the first red light.&ensp;Vroom, vroom.&ensp;But here she surprised me.&ensp;
+attracted a friendly challenger at the first stop light.&ensp;Vroom, vroom.&ensp;But here she surprised me.&ensp;
 <br/>&emsp;"Don't, okay?"&ensp;
 <br/>&emsp;I looked at her.&ensp;"You see a cop?"&ensp;
 <br/>&emsp;"No, and I really don't want to."&ensp;
@@ -257,11 +257,8 @@ and then the bikini.&ensp;Things went everywhere, snowing girl stuff.&ensp;
 <br/>&emsp;"Sure."&ensp;I wasn't as graceful, but tried to be.&ensp;
 Standing.&ensp;Boots I could unzip and step out of, but my second sock nearly had me hopping.&ensp;
 <br/>&emsp;She crossed her ankles and turned in front of me like a ballerina on a music box.&ensp;
-No butt ink or body hair.&ensp;
-Preference versus causation.&ensp;
-The twirl likely just vroom.&ensp;
-That smile now assymetrical.&ensp;
-It stayed on.&ensp;
+Vroom.&ensp;That smile now assymetrical.&ensp;
+I would learn it went to the left when waiting and to the right when taking initiative.&ensp;
 <br/>&emsp;Morning came with the scrape and soft slam of the back door opening and closing.&ensp;
 <br/>&emsp;Out my window I saw the coach get into his Civic.&ensp;The Fastback was already gone.&ensp;I'd slept well.&ensp;I usually do.&ensp;
 <br/>&emsp;Beverly was sitting on the end of the mattress reading my journal.&ensp;It was a large sketch pad 
