--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -202,7 +202,7 @@ Passions are a kind of trap we pay to get into, stay in.&ensp;Or some such crap.
 <br/>&emsp;It was impressive, especially in first gear, the sudden snarl, the car leaping both forward and sideways.&ensp;
 I preferred to initiate first-time passengers with a left-hand turn to push them against their door 
 instead of toward me.&ensp;Though one, fearing defenestration, had tried to grab my arm.&ensp;
-<br/>&emsp;A shift from first to fourth quieted the cabin.&ensp;I powered powered on the stereo.&ensp;Floyd, "Have a Cigar."&ensp;
+<br/>&emsp;A shift from first to fourth quieted the cabin.&ensp;I powered on the stereo.&ensp;Floyd, "Have a Cigar."&ensp;
 <br/>&emsp;"Jesus," she said, rearranging herself.&ensp;"Do that again."&ensp;
 <br/>&emsp;I took a detour to let her experience the only twisty spot in the neighborhood, Dry Creek Road.&ensp;
 I considered it my testing area.&ensp;Nice houses with fussy landscaping.&ensp;
@@ -258,7 +258,7 @@ and then the bikini.&ensp;Things went everywhere, snowing girl stuff.&ensp;
 Standing.&ensp;Boots I could unzip and step out of, but my second sock nearly had me hopping.&ensp;
 <br/>&emsp;She crossed her ankles and turned in front of me like a ballerina on a music box.&ensp;
 Vroom.&ensp;That smile now assymetrical.&ensp;
-I would learn it went to the left when waiting and to the right when taking initiative.&ensp;
+I would learn it went left when waiting and to the right when taking initiative.&ensp;
 <br/>&emsp;Morning came with the scrape and soft slam of the back door opening and closing.&ensp;
 <br/>&emsp;Out my window I saw the coach get into his Civic.&ensp;The Fastback was already gone.&ensp;I'd slept well.&ensp;I usually do.&ensp;
 <br/>&emsp;Beverly was sitting on the end of the mattress reading my journal.&ensp;It was a large sketch pad 
