--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -257,7 +257,7 @@ and then the bikini.&ensp;Things went everywhere, snowing girl stuff.&ensp;
 <br/>&emsp;"Sure."&ensp;I wasn't as graceful, but tried to be.&ensp;
 Standing.&ensp;Boots I could unzip and step out of, but my second sock nearly had me hopping.&ensp;
 <br/>&emsp;She crossed her ankles and turned in front of me like a ballerina on a music box.&ensp;
-Vroom.&ensp;That smile now assymetrical.&ensp;
+Vroom.&ensp;That smile now asymmetrical.&ensp;
 I would learn it went left when waiting and to the right when taking initiative.&ensp;
 <br/>&emsp;Morning came with the scrape and soft slam of the back door opening and closing.&ensp;
 <br/>&emsp;Out my window I saw the coach get into his Civic.&ensp;The Fastback was already gone.&ensp;I'd slept well.&ensp;I usually do.&ensp;
