--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -280,13 +280,13 @@ Dancing around in a bikini watering flowers.&ensp;
 <br/>&emsp;She was relighting the joint.&ensp;Got it going and handed it to me.&ensp;"Done with that."&ensp;
 <br/>&emsp;Ah.&ensp;That was it.&ensp;At least a glimpse of it.&ensp;This, maybe I, was a that.&ensp;Whatever that meant.&ensp;
 I held the joint and thought about it, then took a fatalistic hit.&ensp;I'd find out.&ensp;
-<br/>&emsp;Because it was a weekday the traffic into Santa Cruz was light.&ensp;I told her that I usually
+<br/>&emsp;It was a weekday and traffic was light.&ensp;I told her I usually
 skipped past Santa Cruz to head north to a couple of secluded beaches my housemates had shown me,
 but today wanted to hit the wharf and buy some big towels.&ensp;
 <br/>&emsp;She laughted.&ensp;"You don't have all the gear?"&ensp;
 <br/>&emsp;"I did."&ensp;I told her the story of my necklace, a silver rope holding a rough piece of abalone shell.&ensp;
-I'd seen the bit of shell in the water the last time I'd been.&ensp;It was magically prismatic and tumbling
-around my ankles in the surf.&ensp;It was so elusive I hadn't noticed the sneaker wave that hit me
+The last time I'd been, I'd seen the inch-long magically prismatic fragment tumbling around my ankles in the surf.&ensp;
+It was so elusive I hadn't noticed the sneaker wave that hit me
 waist-high, knocked me over, and stole my towel, a shoe and my sandwich.&ensp;But when I sat up, the
 bit of shell had been in my hand.&ensp;
 <br/>&emsp;Lunch on the wharf made shopping easy.&ensp;I bought her sunglasses and a big hat.&ensp;
