--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -46,14 +46,14 @@ open and close.&ensp;Might be two minutes, maybe an hour.&ensp;
 <br/>&emsp;My helmet collection was in the garage, but also I wanted access to my car for later.&ensp;
 I didn't want this woman to see the potted plants so I quickly 
 hauled open the big door and pushed my Firebird out.&ensp;A lot of wear and tear starting a cold motor,
-and in those days I enjoyed that exercise, on flat ground anyway.&ensp;I had this idea it somehow kept
+and in those days I enjoyed that exercise, on flat ground anyway.&ensp;I had this idea it kept
 me honest or appreciative or something.&ensp;Then I went into the garage and closed the big door behind me.&ensp;
 From the grow lights I could see my collection of brain buckets.&ensp;
 I selected one of the smalls and exitted via the side door.&ensp;
 <br/>&emsp;And there she was.&ensp;Jeans, tennies, tee, and a small duffel.&ensp;I closed the door against the wafting weediness,
 for the nth and most acute time aware it needed a lock.&ensp;
 <br/>&emsp;"Can I drop this somewhere?"&ensp;She casually lifted the duffel.&ensp;
-<br/>&emsp;"Sure.&ensp;C'mon inside.&ensp;We'll get you a jacket."&ensp;
+<br/>&emsp;"Sure.&ensp;C'mon inside.&ensp;We'll get you set up."&ensp;
 <br/>&emsp;"It's summer," she said.&ensp;
 <br/>&emsp;"Almost.&ensp;But I have a policy with motorcycles.&ensp;All the gear, every time."&ensp;
 <br/>&emsp;"Cautious," she said.&ensp;
@@ -64,11 +64,11 @@ I checked the lower glass panes of the door before opening it.&ensp;My little bl
 <br/>&emsp;My bedroom was immediately to the left with an identical door, odd for a bedroom.&ensp;I'd hung a random 
 tablecloth on the inside.&ensp;Spartan.&ensp;A big bin of clean clothes, big bin for laundry, a pair of twin-sized
 box springs and mattresses shoved together.&ensp;I slept diagonally to keep from pushing them apart.&ensp;
-It's a habit I return to when circumstances allow, required or not.&ensp;I pulled one of my old jackets from 
+It's a habit I return to when circumstances allow, required or not.&ensp;I pulled my old bomber from 
 the closet and turned to hand it to her.&ensp;
 <br/>&emsp;But she was looking down.&ensp;"Hi, Fred," she said.&ensp;I realized I liked her voice.&ensp;
 <br/>&emsp;"Fred," I said, "shoo."&ensp;He did a lithe feline uey.&ensp;
-<br/>&emsp;I held out the jacket and she put it on.&ensp;The sleeves were long so I folded them back.&ensp;Then I handed
+<br/>&emsp;I held out the jacket and she put it on.&ensp;The sleeves were long so I folded back the cuffs.&ensp;Then I handed
 her a pair of gloves.&ensp;She pulled one on.&ensp;
 <br/>&emsp;"Uh," I said, "my mistake.&ensp;Let's try the helmet."&ensp;Unless your gloves
 fit perfectly it's impossible to fasten a helmet strap.&ensp;
