--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -47,7 +47,8 @@ open and close.&ensp;Might be two minutes, maybe an hour.&ensp;
 I didn't want this woman to see the potted plants so I quickly 
 hauled open the big door and pushed my Firebird out.&ensp;A lot of wear and tear starting a cold motor,
 and in those days I enjoyed that exercise, on flat ground anyway.&ensp;I had this idea it kept
-me honest or appreciative or something.&ensp;Then I went into the garage and closed the big door behind me.&ensp;
+me honest or appreciative or something.&ensp;
+Back inside the garage I closed the big door behind me.&ensp;
 From the grow lights I could see my collection of brain buckets.&ensp;
 I selected one of the smalls and exitted via the side door.&ensp;
 <br/>&emsp;And there she was.&ensp;Jeans, tennies, tee, and a small duffel.&ensp;I closed the door against the wafting weediness,
