--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -54,7 +54,7 @@ I selected one of the smalls and exitted via the side door.&ensp;
 <br/>&emsp;And there she was.&ensp;Jeans, tennies, tee, and a small duffel.&ensp;I closed the door against the wafting weediness,
 for the nth and most acute time aware it needed a lock.&ensp;
 <br/>&emsp;"Can I drop this somewhere?"&ensp;She casually lifted the duffel.&ensp;
-<br/>&emsp;"Sure.&ensp;C'mon inside.&ensp;We'll get you set up."&ensp;
+<br/>&emsp;"Sure.&ensp;C'mon inside.&ensp;We'll get you a jacket."&ensp;
 <br/>&emsp;"It's summer," she said.&ensp;
 <br/>&emsp;"Almost.&ensp;But I have a policy with motorcycles.&ensp;All the gear, every time."&ensp;
 <br/>&emsp;"Cautious," she said.&ensp;
