--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -324,9 +324,9 @@ but only drank half.&ensp;She finished hers and fell asleep on the drive home.&e
 And I wasn't sure what to do about that.&ensp;
 My housemates and I had had significant others in the past, but since I'd moved in
 there'd been dating but no sleepovers.&ensp;
-Perhaps she had no where else to be, or perhaps go.&ensp;
-Maybe a matter of condition versus circumstances.&ensp;There was a difference between being
-alone and a loner.&ensp;But were all strays astray?&ensp;
+It seemed she had no where else to be, or perhaps go.&ensp;
+There was a difference between being alone and a loner.&ensp;
+But how to tell a stray from one astray?&ensp;
 <br/>&emsp;"Do we need to pick up any stuff from anywhere?"&ensp;
 <br/>&emsp;She looked at me as if she'd known this polite question had to have been a red flag on my horizon.&ensp;
 If I'd been hearing any lines til now, this one sounded the most over-thought:  "Nah.&ensp;I travel light."&ensp;
