--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -325,7 +325,7 @@ And I wasn't sure what to do about that.&ensp;
 My housemates and I had had significant others in the past, but since I'd moved in
 there'd been dating but no sleepovers.&ensp;
 It seemed she had no where else to be, or perhaps go.&ensp;
-There was a difference between being alone and a loner.&ensp;
+I knew the difference between being alone and a loner.&ensp;
 But how to tell a stray from one astray?&ensp;
 <br/>&emsp;"Do we need to pick up any stuff from anywhere?"&ensp;
 <br/>&emsp;She looked at me as if she'd known this polite question had to have been a red flag on my horizon.&ensp;
