--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -333,7 +333,7 @@ If I'd been hearing any lines til now, this one sounded the most over-thought:  
 <br/>&emsp;It begged other questions while implying they'd be best unasked.&ensp;
 <br/>&emsp;That was part of this.&ensp;
 <br/>&emsp;Another part presented itself almost immediately.&ensp;
-I was grabbing a couple of Cokes from the fridge and saw the Civic and the Fastback go past the window
+I was grabbing a couple of Cokes from the fridge when the Civic and the Fastback went past the window
 toward the back.&ensp;Coincidence.&ensp;Or maybe they'd met after work somewhere.&ensp;I wondered what for.&ensp;
 <br/>&emsp;The back door opened as I handed Beverly a can.&ensp;We'd been watching MTV with the cats.&ensp;
 <br/>&emsp;"Hey," the coach said, to me, "can you take a look at this car thing?"&ensp;To her he said,
