--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -252,7 +252,8 @@ helmets and gloves from the mattresses.&ensp;There was her duffel.&ensp;
 <br/>&emsp;"Huh."&ensp;
 <br/>&emsp;"Can I take off my shoes?"&ensp;
 <br/>&emsp;"Sure."&ensp;
-<br/>&emsp;She sat on the mattress, undid her laces, removed her shoes, stood, and slid out of her shirt and jeans,
+<br/>&emsp;She sat on the mattress, undid her laces of her tennies, stood to flick them off, 
+and slid out of her t-shirt and jeans,
 and then the bikini.&ensp;Things went everywhere, snowing girl stuff.&ensp;
 <br/>&emsp;"Want to take yours off?" she asked.&ensp;This woman had octaves.&ensp;
 <br/>&emsp;"Sure."&ensp;I wasn't as graceful, but tried to be.&ensp;
@@ -385,7 +386,7 @@ If you aren't having fun, no one can.&ensp;But as I turned the knob, on another 
 the backseat bench.&ensp;There was a hole in the vinyl on the driver side about the size of a
 dollar bill revealing the horizontal wavy seat springs, one of which had a missing section.&ensp;
 Beneath the springs was a piece of plywood.&ensp;
-<br/>&emsp;The coach flipped the passenger seat forward and got in.&ensp;Mr. Fastback got behind the wheel.&ensp;
+<br/>&emsp;The coach flipped the passenger seat back and got in.&ensp;Mr. Fastback got behind the wheel.&ensp;
 <br/>&emsp;I told her:  "Ask our driver how that hole came to be."&ensp;
 <br/>&emsp;She peered at him in the mirror as he backed down the driveway.&ensp;
 <br/>&emsp;"Ah," he said.&ensp;"Yeah.&ensp;Well.&ensp;Me and&mdash;my ex were, uh&mdash;"&ensp;
