--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -395,7 +395,7 @@ Beneath the springs was a piece of plywood.&ensp;
 with two people's weight, it was enough to . . ."&ensp;He was smirking and snorking by now.&ensp;
 <br/>&emsp;The coach finished:  "To make the seat springs make contact with the battery terminals."&ensp;
 <br/>&emsp;Beverly crowded her jeans against mine, wary of the melted vinyl.&ensp;
-She peeked again at the rearview and started laughing.&ensp;A rich contralto, highly contagious.&ensp;
+She peeked again at the rearview and started laughing, prancing around the scales, highly contagious.&ensp;
 It went on for the first block or so.&ensp;She ran down, then covered her mouth and started again.&ensp;
 We were wiping our eyes when we got to the place.&ensp;As she was getting out she gave the hole and 
 springs another look and asked:  "Anybody get branded?"&ensp;
