--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -252,9 +252,9 @@ helmets and gloves from the mattresses.&ensp;There was her duffel.&ensp;
 <br/>&emsp;"Huh."&ensp;
 <br/>&emsp;"Can I take off my shoes?"&ensp;
 <br/>&emsp;"Sure."&ensp;
-<br/>&emsp;She sat on the mattress, undid her laces of her tennies, stood to flick them off, 
-and slid out of her t-shirt and jeans,
-and then the bikini.&ensp;Things went everywhere, snowing girl stuff.&ensp;
+<br/>&emsp;She bent down to undo the laces of her tennies and then smoothly flicked them off, one on either side of me.&ensp;
+Her t-shirt and jeans were rapidly dispatched, and likewise the bikini.&ensp;
+It was snowing girl stuff.&ensp;
 <br/>&emsp;"Want to take yours off?" she asked.&ensp;This woman had octaves.&ensp;
 <br/>&emsp;"Sure."&ensp;I wasn't as graceful, but tried to be.&ensp;
 Standing.&ensp;Boots I could unzip and step out of, but my second sock nearly had me hopping.&ensp;
@@ -333,7 +333,7 @@ That cat was out of the bag and in my bed.&ensp;
 <br/>&emsp;"Do we need to pick up any stuff from anywhere?"&ensp;
 <br/>&emsp;She looked at me as if she'd known this polite question had to have been a red flag on my horizon.&ensp;
 If I'd been hearing any lines til now, this one sounded the most over-thought:  "Nah.&ensp;I travel light."&ensp;
-<br/>&emsp;It begged other questions while implying they'd be best unasked.&ensp;
+<br/>&emsp;Begging other questions while implying they'd be best unasked.&ensp;
 <br/>&emsp;That was part of this.&ensp;
 <br/>&emsp;Another part presented itself almost immediately.&ensp;
 I was grabbing a couple of Cokes from the fridge when the Civic and the Fastback went past the window
