--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -328,7 +328,7 @@ there'd been dating but no sleepovers.&ensp;
 It seemed she had nowhere else to be, or perhaps go.&ensp;
 I knew the difference between being alone and a loner.&ensp;
 But how to tell a stray from one astray?&ensp;
-Clues, as for anything, and of which, for sure, there were plenty.&ensp;
+Well, clues, as for anything, and of which, for sure, there were plenty.&ensp;
 That cat was out of the bag and in my bed.&ensp;
 <br/>&emsp;"Do we need to pick up any stuff from anywhere?"&ensp;
 <br/>&emsp;She looked at me as if she'd known this polite question had to have been a red flag on my horizon.&ensp;
@@ -400,7 +400,9 @@ with two people's weight, it was enough to . . ."&ensp;He was smirking and snork
 She peeked again at the rearview and started laughing, primally, her voice drawing
 and redrawing the cartoon in the air, highly contagious.&ensp;
 Her face and arm pressed against my chest, she ran down after a about a block.&ensp;
-But leaning back, she took a beath, her hands flew to her mouth and she started again.&ensp;
+But leaning back, she took a breath, her hands flew to her mouth and she started again.&ensp;
+Not forced, not an obvious overplay of the opportunity to ingratiate herself,
+a pleasant female voice in our presense, breaking a drought in that car.&ensp;
 We were all wiping our eyes when we got to the place.&ensp;As she was getting out she gave the hole and 
 springs another look and asked:  "Anybody get branded?"&ensp;
 <br/>&emsp;I'd never thought to ask.&ensp;
