--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -327,9 +327,7 @@ My housemates and I had had significant others in the past, but since I'd moved 
 there'd been dating but no sleepovers.&ensp;
 It seemed she had nowhere else to be, or perhaps go.&ensp;
 I knew the difference between being alone and a loner.&ensp;
-But how to tell a stray from one astray?&ensp;
-Well, clues, as for anything, and of which, for sure, there were plenty.&ensp;
-That cat was out of the bag and in my bed.&ensp;
+But haven't strays often gone somehow astray?&ensp;
 <br/>&emsp;"Do we need to pick up any stuff from anywhere?"&ensp;
 <br/>&emsp;She looked at me as if she'd known this polite question had to have been a red flag on my horizon.&ensp;
 If I'd been hearing any lines til now, this one sounded the most over-thought:  "Nah.&ensp;I travel light."&ensp;
@@ -397,18 +395,15 @@ Beneath the springs was a piece of plywood.&ensp;
 with two people's weight, it was enough to . . ."&ensp;He was smirking and snorking by now.&ensp;
 <br/>&emsp;The coach finished:  "To make the seat springs make contact with the battery terminals."&ensp;
 <br/>&emsp;Beverly crowded her jeans against mine, wary of the melted vinyl.&ensp;
-She peeked again at the rearview and started laughing, primally, her voice drawing
-and redrawing the cartoon in the air, highly contagious.&ensp;
+She peeked again at the rearview and started laughing, primally, highly contagious.&ensp;
 Her face and arm pressed against my chest, she ran down after a about a block.&ensp;
 But leaning back, she took a breath, her hands flew to her mouth and she started again.&ensp;
-Not forced, not an obvious overplay of the opportunity to ingratiate herself,
 a pleasant female voice in our presense, breaking a drought in that car.&ensp;
 We were all wiping our eyes when we got to the place.&ensp;As she was getting out she gave the hole and 
 springs another look and asked:  "Anybody get branded?"&ensp;
-<br/>&emsp;I'd never thought to ask.&ensp;
+<br/>&emsp;I'd never thought to ask.&ensp;I hugged her in admiration while we all went off again, third time in five minutes.&ensp;
 <br/>&emsp;Mr. Fastback turned pink as Bev's bikini.&ensp;
-<br/>&emsp;We should have given ourselves a minute or two, but were seated in a booth, were holding menus, 
-practically having to point to order.&ensp;
+<br/>&emsp;We were seated in a booth, were holding menus, and so bleery we could hardly order.&ensp;
 <p/>
 <br/>&emsp;
 </body>
