--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -401,8 +401,9 @@ But leaning back, she took a breath, her hands flew to her mouth and she started
 a pleasant female voice in our presense, breaking a drought in that car.&ensp;
 We were all wiping our eyes when we got to the place.&ensp;As she was getting out she gave the hole and 
 springs another look and asked:  "Anybody get branded?"&ensp;
-<br/>&emsp;I'd never thought to ask.&ensp;I hugged her in admiration while we all went off again, third time in five minutes.&ensp;
+<br/>&emsp;I'd never thought to ask.&ensp;
 <br/>&emsp;Mr. Fastback turned pink as Bev's bikini.&ensp;
+<br/>&emsp;I hugged her in admiration while we all went off again, third time in five minutes.&ensp;
 <br/>&emsp;We were seated in a booth, were holding menus, and so bleery we could hardly order.&ensp;
 <p/>
 <br/>&emsp;
