--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -386,24 +386,25 @@ If you aren't having fun, no one can.&ensp;But as I turned the knob, on another 
 the backseat bench.&ensp;There was a hole in the vinyl on the driver side about the size of a
 dollar bill revealing the horizontal wavy seat springs, one of which had a missing section.&ensp;
 Beneath the springs was a piece of plywood.&ensp;
-<br/>&emsp;The coach flipped the passenger seat back and got in.&ensp;Mr. Fastback got behind the wheel.&ensp;
-<br/>&emsp;I told her:  "Ask our driver how that hole came to be."&ensp;
-<br/>&emsp;She peered at him in the mirror as he backed down the driveway.&ensp;
-<br/>&emsp;"Ah," he said.&ensp;"Yeah.&ensp;Well.&ensp;Me and&mdash;my ex were, uh&mdash;"&ensp;
+<br/>&emsp;The coach flipped the passenger seat back and got in.&ensp;
+<br/>&emsp;As Mr. Fastback got behind the wheel, I made introductions.&ensp;For an ice-breaker, I said to him:
+"Hey, man, tell her how that hole came to be."&ensp;
+<br/>&emsp;Their eyes met in the rearview as he backed down the driveway.&ensp;
+<br/>&emsp;"Ah," he said.&ensp;He liked this story.&ensp;"Yeah.&ensp;Well.&ensp;Me and&mdash;my ex were, uh&mdash;"&ensp;
 <br/>&emsp;"Getting heavy," the coach said.&ensp;
 <br/>&emsp;"&mdash;yeah.&ensp;And it turns out that the battery is right underneath the seat.&ensp;So when two people . . .&ensp;
 with two people's weight, it was enough to . . ."&ensp;He was smirking and snorking by now.&ensp;
 <br/>&emsp;The coach finished:  "To make the seat springs make contact with the battery terminals."&ensp;
 <br/>&emsp;Beverly crowded her jeans against mine, wary of the melted vinyl.&ensp;
-She peeked again at the rearview and started laughing, primally, highly contagious.&ensp;
-Her face and arm pressed against my chest, she ran down after a about a block.&ensp;
-But leaning back, she took a breath, her hands flew to her mouth and she started again.&ensp;
-a pleasant female voice in our presense, breaking a drought in that car.&ensp;
+She peeked again at the rearview and began laughing, primally, highly contagious.&ensp;
+After about a block she pressed her face against my chest.&ensp;I could feel her breaths slow.&ensp;
+My skin felt cooler when she looked away and 
+up to where a seam had split in the headliner fabric.&ensp;She snickered and was off again.&ensp;
 We were all wiping our eyes when we got to the place.&ensp;As she was getting out she gave the hole and 
 springs another look and asked:  "Anybody get branded?"&ensp;
-<br/>&emsp;I'd never thought to ask.&ensp;
-<br/>&emsp;Mr. Fastback turned pink as Bev's bikini.&ensp;
-<br/>&emsp;I hugged her in admiration while we all went off again, third time in five minutes.&ensp;
+<br/>&emsp;I'd heard the story at least a couple of times at parties, but had never thought to ask.&ensp;
+<br/>&emsp;Mr. Fastback's face turned pink as Bev's bikini.&ensp;
+<br/>&emsp;I hugged her, proud, while we all went off again, third time in five minutes.&ensp;
 <br/>&emsp;We were seated in a booth, were holding menus, and so bleery we could hardly order.&ensp;
 <p/>
 <br/>&emsp;
