--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -399,8 +399,9 @@ with two people's weight, it was enough to . . ."&ensp;He was smirking and snork
 She peeked again at the rearview and began laughing, primally, highly contagious.&ensp;
 After about a block she pressed her face against my chest.&ensp;I could feel her breaths slow.&ensp;
 My skin felt cooler when she looked away and 
-up to where a seam had split in the headliner fabric.&ensp;She snickered and was off again.&ensp;
-We were all wiping our eyes when we got to the place.&ensp;As she was getting out she gave the hole and 
+up to where a seam had split in the headliner fabric.&ensp;
+She snickered and that was all it took.&ensp;
+We were all wiping our eyes when parked at Burger Pit.&ensp;As she was getting out she gave the hole and 
 springs another look and asked:  "Anybody get branded?"&ensp;
 <br/>&emsp;I'd heard the story at least a couple of times at parties, but had never thought to ask.&ensp;
 <br/>&emsp;Mr. Fastback's face turned pink as Bev's bikini.&ensp;
