--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -405,7 +405,7 @@ We were all wiping our eyes when we parked at Burger Pit.&ensp;As she was gettin
 springs another look and asked:  "Anybody get branded?"&ensp;
 <br/>&emsp;I'd heard the story at least a couple of times at parties, but had never thought to ask.&ensp;
 <br/>&emsp;Mr. Fastback's face turned pink as Bev's bikini.&ensp;
-<br/>&emsp;I hugged her, proud, while we all went off again, third time in five minutes.&ensp;
+<br/>&emsp;Glances flashed around and we went off again, leaning on the Volkswagon for support.&ensp;
 <br/>&emsp;We were seated in a booth, were holding menus, and so bleery we could hardly order.&ensp;
 <p/>
 <br/>&emsp;
