--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -130,8 +130,8 @@ he enabled the pump.&ensp;I filled the tank, and closed the cap.&ensp;"Be one se
 <br/>&emsp;Horns.&ensp;"Like what?"&ensp;
 <br/>&emsp;I pointed to a place down the street.&ensp;"Oysters Rockefeller."&ensp;
 <br/>&emsp;I spun us over there, parked and we got seats at the bar.&ensp;
-<br/>&emsp;Their arrival raised an eyebrow, but they were very pretty, lovely shells on a bed of rock salt,
-and when she saw me eat one she quickly followed suit.&ensp;Her expression was like watching a kaleidoscope
+<br/>&emsp;Their arrival raised an eyebrow, lovely shells on a bed of rock salt.&ensp;
+She watched me eat one and quickly followed suit.&ensp;Her expression was a kaleidoscope
 that settled on fascination with what had happened in her mouth.&ensp;I ordered a glass of dry riesling
 for her.&ensp;
 <br/>&emsp;When she'd eaten her last oyster, she asked:  "Can I have one of these shells?"&ensp;
@@ -405,7 +405,6 @@ We were all wiping our eyes when we parked at Burger Pit.&ensp;As she was gettin
 springs another look and asked:  "Anybody get branded?"&ensp;
 <br/>&emsp;I'd heard the story at least a couple of times at parties, but had never thought to ask.&ensp;
 <br/>&emsp;Mr. Fastback's face turned pink as Bev's bikini.&ensp;
-<br/>&emsp;Glances flashed around and we went off again, leaning on the Volkswagon for support.&ensp;
 <br/>&emsp;We were seated in a booth, were holding menus, and so bleery we could hardly order.&ensp;
 <p/>
 <br/>&emsp;
