--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -313,7 +313,7 @@ Two hits apiece and it was getting short.&ensp;I snuffed it against the ragged r
 She rolled over and onto me, hands on my shoulders, 
 and rubbed her nose against mine.&ensp;Definitely warmer.&ensp;
 After a few moments she sat up, arching her back to unclip her top and let it slide down her arms.&ensp;
-Her hat was tilted back a bit, points of sky-brightness peeking through intersections of woven straw,
+Her hat was tilted back, points of sky-brightness peeking through intersections of woven straw,
 a Renaissance halo effect, <i>Saint Ray-Ban With Attendant Areolae</i>.&ensp;
 <br/>&emsp;Uncounted pelicans later, we climbed the cliff and reached the top right as another car parked behind mine.&ensp;
 We said hi as they got out and we got in.&ensp;
@@ -379,7 +379,7 @@ I don't think he had any real worries, not owning anything worth stealing.&ensp;
 get for a second-hand Speedo?&ensp;
 <br/>&emsp;As I turned back toward the house I found myself wondering how they even knew she'd spent the night.&ensp;
 Then I remembered her giggling at the cats.&ensp;And some other noises.&ensp;Jealous, Mr. Fastback.&ensp;
-If you aren't having fun, no one can.&ensp;But as I turned the knob, on another level, yep, driving into fog.&ensp;
+If you aren't having fun, no one can.&ensp;But, at the twist of the knob, on another level, yep, driving into fog.&ensp;
 <br/>&emsp;"Hey," I said to Beverly, "we're heading out for burgers."&ensp;
 <br/>&emsp;She powered off the TV and moved the cats.&ensp;They were sharing her lap.&ensp;Wise guys.&ensp;
 <br/>&emsp;I popped the passenger door of the Fastback and tilted the seat forward so Beverly and I could get to 
@@ -396,6 +396,7 @@ Beneath the springs was a piece of plywood.&ensp;
 with two people's weight, it was enough to . . ."&ensp;He was smirking and snorking by now.&ensp;
 <br/>&emsp;The coach finished:  "To make the seat springs make contact with the battery terminals."&ensp;
 <br/>&emsp;Beverly crowded her jeans against mine, wary of the melted vinyl.&ensp;
+I put my arm across the back of the bench.&ensp;
 She peeked again at the rearview and began laughing, primally, highly contagious.&ensp;
 After about a block she pressed her face against my chest.&ensp;I could feel her breaths slow.&ensp;
 My skin felt cooler when she looked away and 
