--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -404,7 +404,7 @@ up to where a seam had split in the headliner fabric.&ensp;
 She snickered and that was all it took.&ensp;
 We were all wiping our eyes when we parked at Burger Pit.&ensp;As she was getting out she gave the hole and 
 springs another look and asked:  "Anybody get branded?"&ensp;
-<br/>&emsp;At least three times recounted in my presense and she was the first.&ensp;
+<br/>&emsp;The first, to my knowledge.&ensp;
 <br/>&emsp;Mr. Fastback's face turned pink as Bev's bikini.&ensp;
 <br/>&emsp;We were seated in a booth, were holding menus, and so bleery we could hardly order.&ensp;
 <p/>
